--- a/app/src/main/res/layout/ijkplayer.xml
+++ b/app/src/main/res/layout/ijkplayer.xml
@@ -14,9 +14,21 @@
         tools:ignore="true">
 
         <com.xw.happy.ui.PlayerView
+            android:layout_marginLeft="300px"
             android:id="@+id/ijk_player"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="620px"
+            android:layout_height="620px" />
+
+        <SurfaceView
+            android:id="@+id/surface3"
+            android:layout_width="300px"
+            android:layout_height="200px"
+            android:visibility="gone"></SurfaceView>
+
+        <com.xw.happy.activity.MgtvPlayerTestView
+            android:id="@+id/mgtv_player1"
+            android:layout_width="600px"
+            android:layout_height="600px" />
 
     </FrameLayout>
 </FrameLayout>
